Cleaning some code

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -2,4 +2,5 @@
     <StackLayout>
             <Button text="Login With Facebook" class="fb-login-button" (tap)="login()"></Button>
     </StackLayout>
+    <Button text="Status Check" (tap)="statusCheck()"></Button>
 </StackLayout>
